Fix overflow na seção publico alvo

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -410,6 +410,7 @@ header {
   display: flex;
   justify-content: space-between;
   background-color: var(--branco-1);
+  overflow: hidden;
 }
 .pb-alvo-content .pb-alvo-image{
   position: relative;
@@ -430,7 +431,6 @@ header {
 }
 .pb-alvo-content .pb-alvo-image:nth-child(2){
   left: 10px;
-  overflow-x: hidden;
 }
 .pb-alvo-content:nth-child(2) .content{
   padding-left: 15px;
